--- a/nooklist/src/app/pages/login/login.component.html
+++ b/nooklist/src/app/pages/login/login.component.html
@@ -1,1 +1,34 @@
-<p>login works!</p>
+<div class="flex mt-34 w-screen justify-center p-6">
+  <div class="flex flex-col w-4/5">
+    <form [formGroup]="form">
+      <div class="email flex flex-col">
+        <label class="text-sm font-bold text-gray-800 pl-2">Email</label>
+        <app-input
+          label="Test"
+          placeholder="text"
+          fill="outline"
+          [control]="$any(form.controls['email'])"
+        ></app-input>
+      </div>
+      <div class="email flex flex-col">
+        <label class="text-sm font-bold text-gray-800 pl-2">Password</label>
+        <app-input
+          type="password"
+          label="Test"
+          placeholder="text"
+          fill="outline"
+          [control]="$any(form.controls['password'])"
+        ></app-input>
+      </div>
+    </form>
+    <div class="button flex flex-col">
+      <app-button
+        label="Login"
+        fill="solid"
+        color="primary"
+        shape="round"
+        (actionEvent)="onSubmit()"
+      ></app-button>
+    </div>
+  </div>
+</div>
