--- a/nooklist/src/app/pages/login/login.component.html
+++ b/nooklist/src/app/pages/login/login.component.html
@@ -1,34 +1,51 @@
-<div class="flex mt-34 w-screen justify-center p-6">
+<div
+  class="flex h-full w-screen justify-center p-6 items-center flex-col bg-[#FFFCF3]"
+>
+  <img
+    class="bg-[FFFCF3] h-2/5"
+    src="assets/images/it.png"
+    alt="Nooklist Logo"
+  />
   <div class="flex flex-col w-4/5">
     <form [formGroup]="form">
-      <div class="email flex flex-col">
+      <div class="email flex flex-col mb-4">
         <label class="text-sm font-bold text-gray-800 pl-2">Email</label>
         <app-input
-          label="Test"
-          placeholder="text"
+          label="Email"
+          placeholder="Email Address"
           fill="outline"
           [control]="$any(form.controls['email'])"
         ></app-input>
       </div>
-      <div class="email flex flex-col">
+      <div class="email flex flex-col mb-4">
         <label class="text-sm font-bold text-gray-800 pl-2">Password</label>
         <app-input
           type="password"
-          label="Test"
-          placeholder="text"
+          label="Password"
+          placeholder="Password"
           fill="outline"
+          color="danger"
           [control]="$any(form.controls['password'])"
         ></app-input>
       </div>
     </form>
-    <div class="button flex flex-col">
-      <app-button
-        label="Login"
-        fill="solid"
-        color="primary"
-        shape="round"
-        (actionEvent)="onSubmit()"
-      ></app-button>
+    <div class="button flex flex-col justify-center">
+      <div class="flex w-full mb-4">
+        <app-button
+          class="w-full"
+          label="Login"
+          fill="solid"
+          shape="round"
+          (actionEvent)="onSubmit()"
+        ></app-button>
+      </div>
+      <div class="flex w-full justify-center mb-4">
+        <p>Don't have an account?</p>
+        &nbsp;<a
+          class="underline decoration-1 text-blue-600 hover:text-blue-800 cursor-pointer"
+          >Sign up</a
+        >
+      </div>
     </div>
   </div>
 </div>
