--- a/nooklist/src/app/shared/components/button/button.component.html
+++ b/nooklist/src/app/shared/components/button/button.component.html
@@ -4,7 +4,7 @@
   [shape]="shape()"
   [color]="color()"
   (click)="actionItem()"
-  class="bg-amber-300 rounded-lg w-32 h-4"
+  class="bg-[#F5921B] rounded-lg"
 >
   {{ label() }}
   @if (isIcon()) {
