--- a/nooklist/src/app/shared/components/tab-menu/tab-menu.component.html
+++ b/nooklist/src/app/shared/components/tab-menu/tab-menu.component.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
-      <i class="pi pi-home" style="font-size: 1rem"></i>
+      <ion-icon class="pi pi-home" style="font-size: 1rem"></ion-icon>
       Home
     </ion-tab-button>
     <ion-tab-button tab="books">
