--- a/nooklist/src/app/pages/login/login.component.html
+++ b/nooklist/src/app/pages/login/login.component.html
@@ -36,7 +36,7 @@
           label="Login"
           fill="solid"
           shape="round"
-          (actionEvent)="onSubmit()"
+          (actionEvent)="login()"
         ></app-button>
       </div>
       <div class="flex w-full justify-center mb-4">
